create logs detail dialog

--- a/app/src/main/res/layout/activity_log_list.xml
+++ b/app/src/main/res/layout/activity_log_list.xml
@@ -27,6 +27,7 @@
                 app:layout_constraintTop_toTopOf="parent"
                 app:navigationIcon="@drawable/ic_baseline_arrow_back_24"
                 app:title="Log List"
+                app:menu="@menu/menu_log_list"
                 />
             <ProgressBar
                 android:visibility="gone"
