--- a/app/src/main/res/layout/layout_logs.xml
+++ b/app/src/main/res/layout/layout_logs.xml
@@ -44,13 +44,16 @@
                 tools:text="Title"
                 android:textSize="16sp"
                 android:textStyle="bold"/>
+
             <TextView
                 android:id="@+id/tv_desc"
-                app:layout_constraintTop_toBottomOf="@id/tv_category"
+                android:layout_width="0dp"
+                android:layout_height="wrap_content"
+                android:layout_marginEnd="8dp"
+                app:layout_constraintEnd_toStartOf="@+id/tv_date"
                 app:layout_constraintStart_toStartOf="@id/tv_category"
-                tools:text="Foods"
-                android:layout_width="wrap_content"
-                android:layout_height="wrap_content"/>
+                app:layout_constraintTop_toBottomOf="@id/tv_category"
+                tools:text="Foods" />
             <TextView
                 android:id="@+id/tv_nominal"
                 app:layout_constraintTop_toTopOf="parent"
@@ -64,6 +67,7 @@
             <TextView
                 android:id="@+id/tv_date"
                 app:layout_constraintTop_toBottomOf="@id/tv_nominal"
+                app:layout_constraintBottom_toBottomOf="@id/tv_desc"
                 app:layout_constraintEnd_toEndOf="@id/tv_nominal"
                 tools:text="Thursday, 23/3/2022"
                 android:layout_width="wrap_content"
