--- a/app/src/main/res/layout/activity_main.xml
+++ b/app/src/main/res/layout/activity_main.xml
@@ -5,7 +5,7 @@
     android:layout_width="match_parent"
     android:layout_height="match_parent"
     android:id="@+id/refresh_main"
-    tools:context=".presentation.home.MainActivity">
+    tools:context=".features.presentation.pages.home.MainActivity">
 
     <ScrollView
         android:layout_width="match_parent"
