--- a/app/src/main/res/layout/fragment_logs_detail.xml
+++ b/app/src/main/res/layout/fragment_logs_detail.xml
@@ -5,7 +5,7 @@
     android:layout_height="match_parent"
     android:background="@drawable/bottom_sheet_dialog"
     xmlns:app="http://schemas.android.com/apk/res-auto"
-    tools:context=".presentation.logs_detail.LogsDetailFragment">
+    tools:context=".features.presentation.pages.logs_detail.LogsDetailFragment">
 
     <View
         android:id="@+id/bottomsheet_holder"
